--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <script text="JavaScript" src="index.js"></script>
-    <body> 
-        <input name="numeroClonados">
-        <input name="numberOFSpells">
-        <button type="button" name="artifactPresent"> artifactPresent </button>
+  <script text="JavaScript" src="index.js"></script>
+  <script text="JavaScript" src="libs/jquery.min.js"></script>
+    <link rel="stylesheet" href="libs/bootstrap.min.css" />
 
-    </body>
+  <body>
+    <input name="numeroClonados" />
+    <input name="numberOFSpells" />
+    <button type="button" name="artifactPresent">artifactPresent</button>
+
+
+
+  </body>
 </html>
-
