--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         id="myDiagramDiv"
         style="
           border: 1px solid black;
-          width: auto;
-          height: 400px;
+          width: 1100px;
+          height: 380px;
           position: relative;
         "
       >
