--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         <br />
       </div>
 
-      <!-- <div> 
+      <div> 
       <label>¿Esta el encantamiento de Tormenta?</label>
       <input id="tormentEnchantment" type="checkbox" />
           <br>
               <br>
-    </div> -->
+    </div>
 
       <div>
         <label>¿Escribir log del proceso?</label>
