Fixeo al calculo de la tormenta

--- a/index.html
+++ b/index.html
@@ -120,5 +120,11 @@
       <h1>Total Spell Damage: <span id="totalDamage">0</span></h1>
     </div>
 
+    <div class="container">
+      <br><br>
+      <div id="logContainer" class="logContainer"></div>
+      <br><br>
+    </div>
+
   </body>
 </html>
