--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
                     <label class="toggle-group" id="enchantmentToggle">
                         <div class="toggle-label">
                             <div class="toggle-icon icon-enchant">✨</div>
-                            <span>Encantamiento duplicador</span>
+                            <span>Permanente duplicador</span>
                         </div>
                         <div class="toggle-switch">
                             <input type="checkbox" id="duplicatorEnchantmentToggle" onchange="syncToggleToNumber('duplicatorEnchantment', this.checked)">
@@ -658,7 +658,7 @@
                         <label class="form-label" for="duplicatorEnchantment">
                             <span style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 0.5rem;">
                                 <span class="toggle-icon icon-enchant" style="width: 1.5rem; height: 1.5rem; font-size: 1rem;">✨</span>
-                                Encantamientos duplicadores
+                                Permanentes duplicadores
                             </span>
                         </label>
                         <input 
